--- a/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
+++ b/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
@@ -111,3 +111,5 @@ yang membaca lafadz ini diantaranya Sufyan Ats Tsauri  _rahimahullah_ dan juga s
 فَإِذَا قَرَأْتَ الْقُرْآنَ فَاسْتَعِذْ بِاَللَّهِ مِنَ الشَّيْطَانِ الرَّجِيم
 
 “_Apabila kamu membaca Al Qur’an, hendaklah kamu meminta perlindungan kepada Allah dari setan yang terkutuk_”
+
+Sumber : https://bekalislam.firanda.net/2901-membaca-taawwudz.html
