--- a/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
+++ b/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
@@ -14,7 +14,7 @@ _Setelah membaca doa istiftaah maka disunnahkan membac taáwwudz untuk berlindun
 
 a’uudzubillaahi minas syaithaanir rajiim
 
-“_aku memohon perlindungan kepada Allah dari setan yang terkutuk_” ([[1]](l#_ftn1))
+“_aku memohon perlindungan kepada Allah dari setan yang terkutuk_” [1]
 
 ### Kedua:
 
@@ -22,7 +22,7 @@ a’uudzubillaahi minas syaithaanir rajiim
 
 “a’uudzubillaahis samii’il ‘aliimi minas syaithaanir rajiim”
 
-“_aku memohon perlindungan kepada Allah Yang Maha Mendengar lagi Maha Mengetahui, dari setan yang terkutuk_”  ([[2]](#_ftn2))
+“_aku memohon perlindungan kepada Allah Yang Maha Mendengar lagi Maha Mengetahui, dari setan yang terkutuk_”  [2]
 
 ### Ketiga:
 
@@ -30,7 +30,7 @@ a’uudzubillaahi minas syaithaanir rajiim
 
 a’uudzubillaahi minas syaithaanir rajiim wa hamzihi wa nafkhihi wa naftsihi
 
-“_aku memohon perlindungan kepada Allah, dari setan yang terkutuk yaitu dari gangguannya, kesombongannya dan sya’irnya”_  ([[3]](#_ftn3))
+“_aku memohon perlindungan kepada Allah, dari setan yang terkutuk yaitu dari gangguannya, kesombongannya dan sya’irnya”_  [3]
 
 ### Keempat:
 
@@ -38,13 +38,13 @@ a’uudzubillaahi minas syaithaanir rajiim wa hamzihi wa nafkhihi wa naftsihi
 
 a’uudzubillaahis samii’il ‘aliimi minas syaithaanir rajiim min hamzihi wa nafkhihi wa naftsihi/
 
-“_aku memohon perlindungan kepada Allah Yang Maha Mendengar lagi Maha Mengetahui, dari setan yang terkutuk yaitu dari gangguannya, kesombongannya dan sya’irnya”._ ([[4]](#_ftn4))
+“_aku memohon perlindungan kepada Allah Yang Maha Mendengar lagi Maha Mengetahui, dari setan yang terkutuk yaitu dari gangguannya, kesombongannya dan sya’irnya”._ [4]
 
 ### Kelima:
 
 أعوذُ باللهِ السَّمِيعِ العَلِيمِ مِنَ الشيطانِ الرَّجِيمِ إِنَّهُ هُوَ السَّمِيعُ الْعَلِيم
 
-“a’uudzubillaahis samii’il ‘aliimi minas syaithaanir rajiim, innahu huwas samii’ul’alim” ([[5]](#_ftn5))
+“a’uudzubillaahis samii’il ‘aliimi minas syaithaanir rajiim, innahu huwas samii’ul’alim” [5]
 
 ### Keenam:
 
@@ -52,7 +52,7 @@ a’uudzubillaahis samii’il ‘aliimi minas syaithaanir rajiim min hamzihi wa 
 
 “asta’iidzu billahi minas syaithaanirrajiim”
 
-“_aku memohon perlindungan kepada Allah dari setan yang terkutuk_” ([[6]](#_ftn6))
+“_aku memohon perlindungan kepada Allah dari setan yang terkutuk_” [6]
 
 **FOOTNOTE:**
 
