--- a/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/niat-sholat.mdx
+++ b/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/niat-sholat.mdx
@@ -7,31 +7,31 @@ description: Sebelum memulai shalat maka seseorang berniat di hatinya untuk mela
 
 **Penjelasan**
 
-_Sebelum memulai shalat maka seseorang berniat di hatinya untuk melakukan shalat yang hendak dia lakukan. Secara bahasa niat adalah keinginan hati untuk melakukan suatu amalan. Dan menurut syara’ adalah ketetapan hati untuk melakukan suatu ibadah dalam rangka mendekatkan diri kepada Allah Subhanahu wa Ta’ala, mencari ridho dan pahalaNya.  ([[1]](#_ftn1))_
+_Sebelum memulai shalat maka seseorang berniat di hatinya untuk melakukan shalat yang hendak dia lakukan. Secara bahasa niat adalah keinginan hati untuk melakukan suatu amalan. Dan menurut syara’ adalah ketetapan hati untuk melakukan suatu ibadah dalam rangka mendekatkan diri kepada Allah Subhanahu wa Ta’ala, mencari ridho dan pahalaNya._  [1]
 
 ## Hukum-hukum
 
 ### Pertama : Hukum niat dalam sholat
 
-Niat merupakan syarat sah shalat. Tidak sah shalat seseorang kecuali dengan niat. Apabila seseorang mengerjakan shalat tanpa niat, makanya shalatnya tidak sah.  ([[2]](#_ftn2))  Hal ini telah disepakati oleh ulama ([[3]](#_ftn3)), berdasarkan firman Allah azza wa jalla:
+Niat merupakan syarat sah shalat. Tidak sah shalat seseorang kecuali dengan niat. Apabila seseorang mengerjakan shalat tanpa niat, makanya shalatnya tidak sah.  [2]  Hal ini telah disepakati oleh ulama [3], berdasarkan firman Allah azza wa jalla:
 
 وَمَا أُمِرُوا إِلَّا لِيَعْبُدُوا اللَّهَ مُخْلِصِينَ لَهُ الدِّينَ
 
-Padahal mereka tidak disuruh kecuali supaya menyembah Allah dengan memurnikan ketaatan kepada-Nya dalam (menjalankan) agama.  ([[4]](#_ftn4))
+Padahal mereka tidak disuruh kecuali supaya menyembah Allah dengan memurnikan ketaatan kepada-Nya dalam (menjalankan) agama.  [4]
 
-Dalam ayat telah jelas menunjukkan bahwa Ikhlas merupakan amalan hati, yaitu murni niat.  ([[5]](#_ftn5))
+Dalam ayat telah jelas menunjukkan bahwa Ikhlas merupakan amalan hati, yaitu murni niat.  [5]
 
 Disebutkan juga dalam hadits yang diriwayatkan oleh Umar bin Khattab radhiyallahu ‘anhu, bahwa Rasulullah shallallahu ‘alaihi wasallam bersabda:
 
 إِنَّمَا الْأَعْمَالُ بِالنِّيَّاتِ، وَإِنَّمَا لِكُلِّ امْرِئٍ مَا نَوَى
 
-Sesungguhnya setiap amal bergantung kepada niat. Dan setiap orang tergantung apa yang diniatkannya.  ([[6]](#_ftn6))
+Sesungguhnya setiap amal bergantung kepada niat. Dan setiap orang tergantung apa yang diniatkannya.  [6]
 
-Hadits ini menunjukkan bahwa suatu ibadah menjadi sah jika dibarengi dengan niat, jika tidak ada niat di dalamnya maka tidak sah.  ([[7]](#_ftn7))
+Hadits ini menunjukkan bahwa suatu ibadah menjadi sah jika dibarengi dengan niat, jika tidak ada niat di dalamnya maka tidak sah.  [7]
 
 ### Kedua : Niat tempatnya di hati
 
-Hakikat dari niat adalah keinginan, dan tempatnya terdapat dalam hati, karena hal tersebut merupakan amalan hati. Inilah yang dikatakan oleh Hanafiyyah, Syafi’iyyah, Hanabilah dan mayoritas Malikiyyah bahwa niat terdapat dalam hati.  ([[8]](#_ftn8))
+Hakikat dari niat adalah keinginan, dan tempatnya terdapat dalam hati, karena hal tersebut merupakan amalan hati. Inilah yang dikatakan oleh Hanafiyyah, Syafi’iyyah, Hanabilah dan mayoritas Malikiyyah bahwa niat terdapat dalam hati.  [8]
 
 Pendapat jumhur ini memberi kesimpulan dua hal penting:
 
@@ -43,13 +43,13 @@ Hal ini sebagaimana yang banyak dikatakan ulama ahli fiqih bahwa:
 
 لَوْ اخْتَلَفَ اللِّسَان وَالْقَلْب، فَالْعِبْرَة بِمَا فِي الْقَلْب
 
-Jika ucapan lisan berbeda dengan apa yang ada di hati, maka yang dianggap adalah apa yang ada di hati.  ([[9]](#_ftn9))
+Jika ucapan lisan berbeda dengan apa yang ada di hati, maka yang dianggap adalah apa yang ada di hati.  [9]
 
 2**– Dalam mengerjakan suatu ibadah tidak disyaratkan ketika sudah berniat dalam hati kemudian diucapkannya dengan lisan.**
 
-Telah lalu bahwasanya para ulama sepakat bahwa niat dalam hati adalah syarat/rukun sholat. Artinya jika ada seseorang sholat dengan niat di hati dan  **tanpa melafalkannya**  maka shalatnya sah dengan kesepekatan ulama  ([[10]](#_ftn10)).
+Telah lalu bahwasanya para ulama sepakat bahwa niat dalam hati adalah syarat/rukun sholat. Artinya jika ada seseorang sholat dengan niat di hati dan  **tanpa melafalkannya**  maka shalatnya sah dengan kesepekatan ulama  [10].
 
-Adapun melafalkan niat ketika hendak sholat maka hukumnya diperselisihkan oleh para ulama, sebagian menganjurkannya, sebagian memakruhkannya, sebagian menganggapnya sekedar boleh namun tidak utama, dan sebagian menganggapnya bidáh atau haram([[11]](#_ftn11)).
+Adapun melafalkan niat ketika hendak sholat maka hukumnya diperselisihkan oleh para ulama, sebagian menganjurkannya, sebagian memakruhkannya, sebagian menganggapnya sekedar boleh namun tidak utama, dan sebagian menganggapnya bidáh atau haram[11].
 
 Pendapat yang kuat bahwasanya melafadzkan niat dengan lisan dalam suatu ibadah tidak disyariatkan, karena hal itu dapat menimbulkan was-was dalam hati. Namun, sebagian ulama mejadikan hal tersebut termasuk amalan yang mustahab dan bahkan menjadikan syarat yang harus dikerjakan.
 
@@ -57,7 +57,7 @@ Hal ini berdasarkan hadits yang diriwayatkan oleh Abu Humaid As-Sa’idiy radhiy
 
 كَانَ رَسُولُ اللَّهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ: ” إِذَا قَامَ إِلَى الصَّلَاةِ، اسْتَقْبَلَ الْقِبْلَةَ، وَرَفَعَ يَدَيْهِ، وَقَالَ: اللَّهُ أَكْبَرُ
 
-Rasulullah shallallahu ‘alaihi wasallam jika berdiri untuk shalat maka beliau menghadap qiblat, mengangkat kedua tangannya dan mengucapkan “Allahu Akbar.” ([[12]](#_ftn12))
+Rasulullah shallallahu ‘alaihi wasallam jika berdiri untuk shalat maka beliau menghadap qiblat, mengangkat kedua tangannya dan mengucapkan “Allahu Akbar.” [12]
 
 Dalam hadits ini menunjukkan bahwa beliau shallallahu ‘alaihi wasallam tidak mengucapkan sesuatu apa pun sebelum bertakbir. Karenanya melafalkan niat dalam sholat tidak ada asalnya dari perbuatan Nabi shallallahu ‘alaihi wasallam sesuai kesepekatan ulama. Tidak pernah pula dicontohkan oleh Sahabat, tidak pula dari kalangan tabi’in.
 
@@ -67,29 +67,29 @@ Beliau berkata :
 
 إِنْ كُنْتَ تُرِيْدُ إِحْضَارَ النِّيَّةِ فَالنِّيَّةُ حَاضِرَةٌ لِأَنَّكَ قُمْتَ لِتُؤَدِّيَ الْفَرِيْضَةَ وَهَذِهِ هِيَ النِّيَّةُ وَمَحَلُّهَا الْقَلْبُ لَا اللَّفْظُ، إِنْ كُنْتَ تُرِيْدُ تَصْحِيْحَ اللَّفْظِ فَاللَّفْظُ لَا يَجِبُ
 
-ـJika kamu hendak menghadirkan niat, maka niat itu telah ada, dikarenakan kamu telah berdiri untuk mendirikan kewajiban itu, itulah sebenarnya niat dan tempatnya adalah hati tidak perlu dilafalkan. Namun, apabila kamu ingin membenarkan lafadz (niat), maka sejatinya melafalkannya tidaklah wajib.  ([[13]](#_ftn13))
+ـJika kamu hendak menghadirkan niat, maka niat itu telah ada, dikarenakan kamu telah berdiri untuk mendirikan kewajiban itu, itulah sebenarnya niat dan tempatnya adalah hati tidak perlu dilafalkan. Namun, apabila kamu ingin membenarkan lafadz (niat), maka sejatinya melafalkannya tidaklah wajib.  [13]
 
 As-Suyuthi (Ulama madzhab Syafií) berkata:
 
 وَمِنَ الْبِدَعِ أَيَضًا الْوَسْوَسَةُ فِي نِيَّةِ الصّلَاةِ وَلَمْ يَكُنْ ذَلِكَ مِنْ فِعْلِ النَّبِيِّ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ وَلَا أَصْحَابِهِ، كَانُوا لَا يَنطِقُوْنَ بِشَيءٍ مِنْ نِيَّةِ الصَّلَاةِ سِوَى التَّكْبِيرِ
 
-Termasuk amalan bidáh adalah was-was dalam niat shalat, hal itu bukanlah termasuk perbuatan Nabi shallallahu álaihi wasallam juga bukan dari para sahabat beliau. Mereka tidak mengucapkan sesuatu dalam mengucapkan shalat selain takbir. ([[14]](#_ftn14))
+Termasuk amalan bidáh adalah was-was dalam niat shalat, hal itu bukanlah termasuk perbuatan Nabi shallallahu álaihi wasallam juga bukan dari para sahabat beliau. Mereka tidak mengucapkan sesuatu dalam mengucapkan shalat selain takbir. [14]
 
 Abu Ishaq As-Syairazi (dari madzhab Syafií wafat 476 H) berkata:
 
 وَمِنْ أَصْحَابِنَا مَنْ قَالَ: يَنْوِي بِالْقَلْبِ، وَيَتَلَفَّظُ بِالِّلسَانِ. وَلَيْسَ بِشَيْءٍ؛ لِأَنَّ النِّيَّةَ هِيَ الْقَصْدُ بِالْقَلْبِ
 
-Sebagian ulama madzhab kami berkata: “berniat dalam hati dan mengucapkannya dengan lisan, tidaklah dibenarkan, karena niat adalah keinginan yang bertempat dalam hati.” ([[15]](#_ftn15))
+Sebagian ulama madzhab kami berkata: “berniat dalam hati dan mengucapkannya dengan lisan, tidaklah dibenarkan, karena niat adalah keinginan yang bertempat dalam hati.” [15]
 
-Tidak dibenarkan dan bahkan termasuk perkara yang tidak disyaratkan apabila diucapkan dengan lisan. ([[16]](#_ftn16))
+Tidak dibenarkan dan bahkan termasuk perkara yang tidak disyaratkan apabila diucapkan dengan lisan. [16]
 
 Begitu juga halnya yang dikatakan oleh Ibnu Taimiyyah (ulama madzhab Hanbali):
 
 وَقَالَتْ طَائِفَةٌ مِنْ أَصْحَابِ مَالِكٍ، وَأَحْمَدَ، وَغَيْرِهِمَا: لَا يُسْتَحَبُّ التَّلَفُّظُ بِهَا؛ لِأَنَّ ذَلِكَ بِدْعَةٌ لَمْ يُنْقَلْ عَنْ رَسُولِ اللَّهِ – صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ – وَلَا أَصْحَابِهِ وَلَا أَمَرَ النَّبِيُّ – صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ – أَحَدًا مِنْ أُمَّتِهِ أَنْ يَلْفِظَ بِالنِّيَّةِ وَلَا عَلَّمَ ذَلِكَ أَحَدًا مِنْ الْمُسْلِمِينَ، وَلَوْ كَانَ هَذَا مَشْرُوعًا لَمْ يُهْمِلْهُ النَّبِيُّ – صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ – وَأَصْحَابُهُ، مَعَ أَنَّ الْأُمَّةَ مُبْتَلَاةٌ بِهِ كُلَّ يَوْمٍ وَلَيْلَةٍ. وَهَذَا الْقَوْلُ أَصَحُّ، بَلْ التَّلَفُّظُ بِالنِّيَّةِ نَقْصٌ فِي الْعَقْلِ وَالدِّينِ: أَمَّا فِي الدِّينِ فَلِأَنَّهُ بِدْعَةٌ، وَأَمَّا فِي الْعَقْلِ فَلِأَنَّ هَذَا بِمَنْزِلَةِ مَنْ يُرِيدُ أَكْلَ الطَّعَامِ فَقَالَ: أَنْوِي بِوَضْعِ يَدِي فِي هَذَا الْإِنَاءِ أَنِّي آخُذُ مِنْهُ لُقْمَةً، فَأَضَعُهَا فِي فَمِي فَأَمْضُغُهَا، ثُمَّ أَبْلَعُهَا لِأَشْبَعَ فَهَذَا حُمْقٌ وَجَهْل
 
-Sebagian ulama Malikiyyah, Hanabilah dan selain dari keduanya melafadzkan niat bukan sesuatu yang  _mustahab_, karena hal itu merupakan sesuatu yang diada-adakan dalam masalah agama, tidak pernah didapati dari Rasulullah shallallahu álaihi wasallam dan para sahabat beliau. Nabi shallallahu álaihi wasallam pun tidak pernah memerintahkan satu dari umatnya agar melafadzkan niat tidak juga mengajarkan kepada satu dari kaum muslimin. Jika hal ini disyariatkan, maka tentunya Nabi shallallahu álaihi wasallam dan para sahabatnya tidak mengabaikannya, padahal ummatnya diuji setiap siang dan malam. Ini merupakan pendapat yang paling benar. Bahkan melafadzkan niat merupakan suatu bentuk cacat dalam akal dan agama: Maksud cacat dalam agama karena hal itu merupakan perkara yang diada-adakan. Adapun cacat dalam akal karena hal ini sama halnya dengan orang yang ingin makan, lalu dia mengatakan:  _Aku berniat meletakkan tanganku di bejana ini untuk mengambil sesuap, lalu aku letakkan di mulutku lalu aku mengunyahnya, kemudian aku menelannya supaya aku kenyang_. Dan ini merupakan kebodohan dan kejahilan. ([[17]](#_ftn17))
+Sebagian ulama Malikiyyah, Hanabilah dan selain dari keduanya melafadzkan niat bukan sesuatu yang  _mustahab_, karena hal itu merupakan sesuatu yang diada-adakan dalam masalah agama, tidak pernah didapati dari Rasulullah shallallahu álaihi wasallam dan para sahabat beliau. Nabi shallallahu álaihi wasallam pun tidak pernah memerintahkan satu dari umatnya agar melafadzkan niat tidak juga mengajarkan kepada satu dari kaum muslimin. Jika hal ini disyariatkan, maka tentunya Nabi shallallahu álaihi wasallam dan para sahabatnya tidak mengabaikannya, padahal ummatnya diuji setiap siang dan malam. Ini merupakan pendapat yang paling benar. Bahkan melafadzkan niat merupakan suatu bentuk cacat dalam akal dan agama: Maksud cacat dalam agama karena hal itu merupakan perkara yang diada-adakan. Adapun cacat dalam akal karena hal ini sama halnya dengan orang yang ingin makan, lalu dia mengatakan:  _Aku berniat meletakkan tanganku di bejana ini untuk mengambil sesuap, lalu aku letakkan di mulutku lalu aku mengunyahnya, kemudian aku menelannya supaya aku kenyang_. Dan ini merupakan kebodohan dan kejahilan. [17]
 
-Karena sejatinya niat mengikuti pengetahuan (apa yang dikerjakannya). Setiap kali seorang hamba mengetahui apa yang dikerjakannya, maka sejatinya dia telah meniatkannya secara darurat. Tidak terbayangkan dengan mengetahui apa yang dikerjakan namun tidak disertai niat. Para imam madzhab sepakat bahwa mengeraskan niat dan mengulang-ulanginya bukanlah hal yang disyariatkan. Justru orang yang membiasakannya, hendaknya diajarkan ajaran yang dapat menghalanginya dari ibadah yang mengandung kebidáhan dan mengganggu manusia dengan mengeraskan suaranya. Wallahu a’lam. ([[18]](#_ftn18))
+Karena sejatinya niat mengikuti pengetahuan (apa yang dikerjakannya). Setiap kali seorang hamba mengetahui apa yang dikerjakannya, maka sejatinya dia telah meniatkannya secara darurat. Tidak terbayangkan dengan mengetahui apa yang dikerjakan namun tidak disertai niat. Para imam madzhab sepakat bahwa mengeraskan niat dan mengulang-ulanginya bukanlah hal yang disyariatkan. Justru orang yang membiasakannya, hendaknya diajarkan ajaran yang dapat menghalanginya dari ibadah yang mengandung kebidáhan dan mengganggu manusia dengan mengeraskan suaranya. Wallahu a’lam. [18]
 
 **FOOTNOTE:**
 
