--- a/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/niat-sholat.mdx
+++ b/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/niat-sholat.mdx
@@ -1,6 +1,7 @@
 ---
 title: Niat Sholat
 description: Sebelum memulai shalat maka seseorang berniat di hatinya untuk melakukan shalat yang hendak dia lakukan
+sidebar_position:1
 ---
 
 ## Niat Shalat
