--- a/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
+++ b/docs/ibadah-wajib/sholat/bacaan-dan-gerakan/membaca-taawwudz.mdx
@@ -1,6 +1,7 @@
 ---
 title: Membaca Ta’awwudz
 description: Setelah membaca doa istiftaah maka disunnahkan membac taáwwudz untuk berlindung kepada Allah sebelum membaca surat al-Fatihah
+sidebar_position: 3
 ---
 
 ## Membaca Ta’awwudz
