Update and rename mishbah-kemenag.md to mishbah-kemenag.mdx

--- a/docs/quran/mishbah-kemenag.mdx
+++ b/docs/quran/mishbah-kemenag.mdx
@@ -5,9 +5,21 @@ Best used with font LPMQ Isep Mishbah: https://lajnah.kemenag.go.id/unduhan/qura
 -->
 
 # 1
-
+```md
 بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
-
+```
+<details>
+<summary>Latin</summary>
+  Bismillāhir-raḥmānir-raḥīm(i).
+</details>
+<details>
+<summary>Terjemah</summary>
+  Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
+</details>
+<details>
+<summary>Tafsir Jalalayn</summary>
+  (Dengan nama Allah Yang Maha Pemurah lagi Maha Penyayang)
+</details>
 # 2
 
 اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ
