--- a/docs/quran/mishbah-kemenag.mdx
+++ b/docs/quran/mishbah-kemenag.mdx
@@ -5,21 +5,13 @@ Best used with font LPMQ Isep Mishbah: https://lajnah.kemenag.go.id/unduhan/qura
 -->
 
 # 1
-```md
-بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
-```
-<details>
-<summary>Latin</summary>
-  Bismillāhir-raḥmānir-raḥīm(i).
-</details>
-<details>
-<summary>Terjemah</summary>
-  Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
-</details>
-<details>
-<summary>Tafsir Jalalayn</summary>
-  (Dengan nama Allah Yang Maha Pemurah lagi Maha Penyayang)
-</details>
+## بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
+<Tabs groupId="detail">
+  <TabItem value="latin" label="Latin">Bismillāhir-raḥmānir-raḥīm(i).</TabItem>
+  <TabItem value="terjemah" label="Terjemah">Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.</TabItem>
+<TabItem value="jalalayn" label="Tafsir Jalalayn">Dengan nama Allah Yang Maha Pemurah lagi Maha Penyayang.</TabItem>
+</Tabs>
+
 # 2
 
 اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ
