--- a/docs/quran/mishbah-kemenag.mdx
+++ b/docs/quran/mishbah-kemenag.mdx
@@ -1,3 +1,5 @@
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 <!--
 Title : Quran Kemenag
 Source: https://quran.kemenag.go.id
