--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,4 +4,10 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
+```mdx-code-block
+import DocCardList from '@theme/DocCardList';
+
+<DocCardList />
+```
+
 1. Al Fatihah
