--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,10 +4,10 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
-```mdx-code-block
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
-```
+<section class='row'>
+        <article className="col col--6 margin-bottom--lg">
+          <DocCard>test</DocCard>
+        </article>
+</section>
 
 1. Al Fatihah
