--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,8 +4,8 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
-<section class='row'>
-        <article className="col col--6 margin-bottom--lg">
+<section class="row">
+        <article class="col col--6 margin-bottom--lg">
           <DocCard>test</DocCard>
         </article>
 </section>
