--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,6 +4,10 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
+:::my-custom-admonition[My Title]
 
+It works!
+
+:::
 
 1. Al Fatihah
