--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,10 +4,15 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
-:::my-custom-admonition[My Title]
+:::my-custom-admonition[1. Al Fatihah]
 
 It works!
 lagi
 :::
 
-1. Al Fatihah
+:::my-custom-admonition[2. Al Baqarah]
+
+It works!
+lagi
+:::
+
