--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,13 +4,13 @@ title: Quran
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
-:::my-custom-admonition[1. Al Fatihah]
+:::box1[1. Al Fatihah]
 
 It works!
 lagi
 :::
 
-:::my-custom-admonition[2. Al Baqarah]
+:::box2[2. Al Baqarah]
 
 It works!
 lagi
