--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -5,9 +5,9 @@ title: Quran
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
 :::box1[1. Al Fatihah]
-الفاتحة
-Makiyah
-Jumlah Ayat : 7
+الفاتحة\
+Makiyah\
+Jumlah Ayat : 7\
 Urutan Turun : 5
 :::
 
