--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -1,8 +1,10 @@
 ---
 title: Quran
 ---
+```mdx-code-block
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+```
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
 
