--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -17,16 +17,20 @@ Urutan Turun : 5
 
 :::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
 Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs>
-  <TabItem value="kemenag" label="Tafsir Kemenag" default>
-    Aku memulai bacaan Al-Qur'an dengan menyebut nama Allah, nama teragung bagi satu-satunya Tuhan yang patut disembah, yang memiliki seluruh sifat kesempurnaan dan tersucikan dari segala bentuk kekurangan, Yang Maha Pengasih, Pemilik dan sumber sifat kasih Yang menganugerahkan segala macam karunia, baik besar maupun kecil, kepada seluruh makhluk, Maha Penyayang Yang tiada henti memberi kasih dan kebaikan kepada orang-orang yang beriman. Memulai setiap pekerjaan dengan menyebut nama Allah (basmalah) akan mendatangkan keberkahan, dan dengan mengingat Allah dalam setiap pekerjaan, seseorang akan memiliki kekuatan spiritual untuk melakukan yang terbaik dan menghindar dari keburukan.
-  </TabItem>
-  <TabItem value="orange" label="Orange">
-    This is an orange 🍊
-  </TabItem>
-  <TabItem value="banana" label="Banana">
-    This is a banana 🍌
-  </TabItem>
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
 </Tabs>
 
 :::
