--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -1,1 +1,147 @@
-alfatihah
+---
+title: Al Fatihah
+---
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+:::box1[1. Al Fatihah]
+الفاتحة\
+Makiyah\
+Jumlah Ayat : 7\
+Urutan Turun : 5
+:::
+
+:::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+
+:::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+:::box2[الرَّحْمٰنِ الرَّحِيْمِۙ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+:::box2[مٰلِكِ يَوْمِ الدِّيْنِۗ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+:::box2[اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+:::box2[اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
+:::box2[صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ]
+Bismillāhir-raḥmānir-raḥīm(i).
+<Tabs groupId="terjemah">
+  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
+  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
+<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
+<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
+</Tabs>
+
+<Tabs groupId="tafsir">
+  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
+  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
+<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
+<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
+<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
+</Tabs>
+
+:::
