--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -12,136 +12,42 @@ Urutan Turun : 5
 :::
 
 :::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
-
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+Bismillāhir-raḥmānir-raḥīm(i).\
+Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
 :::
 
 :::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
+Al-ḥamdu lillāhi rabbil-‘ālamīn(a).\
+Segala puji bagi Allah, Tuhan[^1] semesta alam
 
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+[^1]: Allah Swt. disebut rabb (Tuhan) seluruh alam karena Dialah yang telah menciptakan, memelihara, mendidik, mengatur, mengurus, memberi rezeki, dan sebagainya kepada semua makhluk-Nya.
 :::
+
 :::box2[الرَّحْمٰنِ الرَّحِيْمِۙ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
-
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+Ar-raḥmānir-raḥīm(i).\
+Yang Maha Pengasih lagi Maha Penyayang,
 :::
+
 :::box2[مٰلِكِ يَوْمِ الدِّيْنِۗ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
+Māliki yaumid-dīn(i).\
+Pemilik hari Pembalasan.[^2]
 
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+[^2]: Yaumid-dīn (hari Pembalasan) adalah hari ketika kelak manusia menerima balasan atas amal-amalnya yang baik dan yang buruk. Hari itu disebut juga yaumul-qiyāmah (hari Kiamat), yaumul-ḥisāb (hari Penghitungan), dan sebagainya.
 :::
+
 :::box2[اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
-
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+Iyyāka na‘budu wa iyyāka nasta‘īn(u),\
+Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami memohon pertolongan.
 :::
+
 :::box2[اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
+Ihdinaṣ-ṣirāṭal-mustaqīm(a).\
+Bimbinglah kami ke jalan yang lurus,[^3]
 
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+[^3]: Jalan yang lurus adalah jalan hidup yang benar dan sesuai dengan ajaran Islam yang terkandung dalam Al-Qur’an dan hadis.
 :::
+
 :::box2[صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ]
-Bismillāhir-raḥmānir-raḥīm(i).
-<Tabs groupId="terjemah">
-  <TabItem value="kemenag" label="Kemenag">Use Command + C to copy.</TabItem>
-  <TabItem value="affairs" label="Affairs">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="complex" label="Complex">Use Command + C to copy.</TabItem>
-<TabItem value="tanzil" label="Tanzil">Use Command + C to copy.</TabItem>
-<TabItem value="sabix" label="Complex">Use Command + C to copy.</TabItem>
-</Tabs>
-
-<Tabs groupId="tafsir">
-  <TabItem value="jalalayn" label="Jalalayn">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="tahlili" label="Tahlili">Use Command + C to copy.</TabItem>
-<TabItem value="wajiz" label="Wajiz">Use Command + C to copy.</TabItem>
-<TabItem value="mokhtasar" label="Mokhtasar">Use Command + C to copy.</TabItem>
-<TabItem value="muntakhab" label="Muntakhab">Use Command + C to copy.</TabItem>
-</Tabs>
-
+Ṣirāṭal-lażīna an‘amta ‘alaihim, gairil-magḍūbi ‘alaihim wa laḍ-ḍāllīn(a).\
+(yaitu) jalan orang-orang yang telah Engkau beri nikmat, bukan (jalan) mereka yang dimurkai dan bukan (pula jalan) orang-orang yang sesat.
 :::
