--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -12,16 +12,16 @@ Urutan Turun : 5
 :::
 
 :::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
-Bismillāhir-raḥmānir-raḥīm(i).\
-Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
+Bismillāhir-raḥmānir-raḥīm(i).
 :::
+Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
 
 :::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
-Al-ḥamdu lillāhi rabbil-‘ālamīn(a).\
+Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
+:::
 Segala puji bagi Allah, Tuhan[^1] semesta alam
 
 [^1]: Allah Swt. disebut rabb (Tuhan) seluruh alam karena Dialah yang telah menciptakan, memelihara, mendidik, mengatur, mengurus, memberi rezeki, dan sebagainya kepada semua makhluk-Nya.
-:::
 
 :::box2[الرَّحْمٰنِ الرَّحِيْمِۙ]
 Ar-raḥmānir-raḥīm(i).\
