--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -14,14 +14,14 @@ Urutan Turun : 5
 :::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
 Bismillāhir-raḥmānir-raḥīm(i).
 :::
-Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.
+*Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.*
 
 ---
 
 :::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
 Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 :::
-Segala puji bagi Allah, Tuhan[^1] semesta alam
+*Segala puji bagi Allah, Tuhan[^1] semesta alam*
 
 ---
 
