--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -3,6 +3,9 @@ title: Al Fatihah
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import EndOfAyahNumber from './EndOfAyahNumber';
+
+
 
 :::box1[1. Al Fatihah]
 الفاتحة\
@@ -11,7 +14,7 @@ Jumlah Ayat : 7\
 Urutan Turun : 5
 :::
 
-:::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
+:::box2[<EndOfAyahNumber number="1" />بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ]
 Bismillāhir-raḥmānir-raḥīm(i).
 :::
 *Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.*
