--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -3,7 +3,7 @@ title: Al Fatihah
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-import EndOfAyahNumber from './EndOfAyahNumber';
+import EndOfAyahNumber from '../../../EndOfAyahNumber';
 
 
 
