--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -14,7 +14,7 @@ Jumlah Ayat : 7\
 Urutan Turun : 5
 :::
 
-:::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ <EndOfAyahNumber number="۱" />]
+:::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ (۱)]
 Bismillāhir-raḥmānir-raḥīm(i).
 :::
 *Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.*
