--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -21,7 +21,7 @@ Bismillāhir-raḥmānir-raḥīm(i).
 
 ---
 
-:::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
+:::box2[(۲) اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
 Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 :::
 *Segala puji bagi Allah, Tuhan[^1] semesta alam*
@@ -30,24 +30,24 @@ Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 
 [^1]: Allah Swt. disebut rabb (Tuhan) seluruh alam karena Dialah yang telah menciptakan, memelihara, mendidik, mengatur, mengurus, memberi rezeki, dan sebagainya kepada semua makhluk-Nya.
 
-:::box2[الرَّحْمٰنِ الرَّحِيْمِۙ]
+:::box2[(۳) الرَّحْمٰنِ الرَّحِيْمِۙ]
 Ar-raḥmānir-raḥīm(i).\
 Yang Maha Pengasih lagi Maha Penyayang,
 :::
 
-:::box2[مٰلِكِ يَوْمِ الدِّيْنِۗ]
+:::box2[(٤) مٰلِكِ يَوْمِ الدِّيْنِۗ]
 Māliki yaumid-dīn(i).\
 Pemilik hari Pembalasan.[^2]
 
 [^2]: Yaumid-dīn (hari Pembalasan) adalah hari ketika kelak manusia menerima balasan atas amal-amalnya yang baik dan yang buruk. Hari itu disebut juga yaumul-qiyāmah (hari Kiamat), yaumul-ḥisāb (hari Penghitungan), dan sebagainya.
 :::
 
-:::box2[اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
+:::box2[(٥) اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
 Iyyāka na‘budu wa iyyāka nasta‘īn(u),\
 Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami memohon pertolongan.
 :::
 
-:::box2[اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
+:::box2[(٦) اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
 Ihdinaṣ-ṣirāṭal-mustaqīm(a).\
 Bimbinglah kami ke jalan yang lurus,[^3]
 
