--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -17,14 +17,14 @@ Urutan Turun : 5
 :::box2[بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ (۱)]
 Bismillāhir-raḥmānir-raḥīm(i).
 :::
-*Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.*
+*1. Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.*
 
 ---
 
 :::box2[(۲) اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
 Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 :::
-*Segala puji bagi Allah, Tuhan[^1] semesta alam*
+*2. Segala puji bagi Allah, Tuhan[^1] semesta alam*
 
 ---
 
@@ -32,29 +32,41 @@ Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 
 :::box2[(۳) الرَّحْمٰنِ الرَّحِيْمِۙ]
 Ar-raḥmānir-raḥīm(i).\
-Yang Maha Pengasih lagi Maha Penyayang,
 :::
+
+*3. Yang Maha Pengasih lagi Maha Penyayang,*
 
 :::box2[(٤) مٰلِكِ يَوْمِ الدِّيْنِۗ]
 Māliki yaumid-dīn(i).\
-Pemilik hari Pembalasan.[^2]
+:::
+
+*4. Pemilik hari Pembalasan.[^2]*
+
+---
 
 [^2]: Yaumid-dīn (hari Pembalasan) adalah hari ketika kelak manusia menerima balasan atas amal-amalnya yang baik dan yang buruk. Hari itu disebut juga yaumul-qiyāmah (hari Kiamat), yaumul-ḥisāb (hari Penghitungan), dan sebagainya.
-:::
 
 :::box2[(٥) اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
 Iyyāka na‘budu wa iyyāka nasta‘īn(u),\
-Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami memohon pertolongan.
 :::
+
+---
+
+*5. Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami memohon pertolongan.*
 
 :::box2[(٦) اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
 Ihdinaṣ-ṣirāṭal-mustaqīm(a).\
-Bimbinglah kami ke jalan yang lurus,[^3]
+:::
+
+*6. Bimbinglah kami ke jalan yang lurus,[^3]*
+
+---
 
 [^3]: Jalan yang lurus adalah jalan hidup yang benar dan sesuai dengan ajaran Islam yang terkandung dalam Al-Qur’an dan hadis.
-:::
 
-:::box2[صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ]
+:::box2[(٧) صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ]
 Ṣirāṭal-lażīna an‘amta ‘alaihim, gairil-magḍūbi ‘alaihim wa laḍ-ḍāllīn(a).\
-(yaitu) jalan orang-orang yang telah Engkau beri nikmat, bukan (jalan) mereka yang dimurkai dan bukan (pula jalan) orang-orang yang sesat.
 :::
+*7. (yaitu) jalan orang-orang yang telah Engkau beri nikmat, bukan (jalan) mereka yang dimurkai dan bukan (pula jalan) orang-orang yang sesat.*
+
+---
