--- a/src/pages/quran/surat/al-fatihah.mdx
+++ b/src/pages/quran/surat/al-fatihah.mdx
@@ -21,7 +21,7 @@ Bismillāhir-raḥmānir-raḥīm(i).
 
 ---
 
-:::box2[(۲) اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ]
+:::box2[اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ (۲)]
 Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 :::
 *2. Segala puji bagi Allah, Tuhan[^1] semesta alam*
@@ -30,13 +30,13 @@ Al-ḥamdu lillāhi rabbil-‘ālamīn(a).
 
 [^1]: Allah Swt. disebut rabb (Tuhan) seluruh alam karena Dialah yang telah menciptakan, memelihara, mendidik, mengatur, mengurus, memberi rezeki, dan sebagainya kepada semua makhluk-Nya.
 
-:::box2[(۳) الرَّحْمٰنِ الرَّحِيْمِۙ]
+:::box2[الرَّحْمٰنِ الرَّحِيْمِۙ (۳)]
 Ar-raḥmānir-raḥīm(i).\
 :::
 
 *3. Yang Maha Pengasih lagi Maha Penyayang,*
 
-:::box2[(٤) مٰلِكِ يَوْمِ الدِّيْنِۗ]
+:::box2[مٰلِكِ يَوْمِ الدِّيْنِۗ (٤)]
 Māliki yaumid-dīn(i).\
 :::
 
@@ -46,7 +46,7 @@ Māliki yaumid-dīn(i).\
 
 [^2]: Yaumid-dīn (hari Pembalasan) adalah hari ketika kelak manusia menerima balasan atas amal-amalnya yang baik dan yang buruk. Hari itu disebut juga yaumul-qiyāmah (hari Kiamat), yaumul-ḥisāb (hari Penghitungan), dan sebagainya.
 
-:::box2[(٥) اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ]
+:::box2[اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ (٥)]
 Iyyāka na‘budu wa iyyāka nasta‘īn(u),\
 :::
 
@@ -54,7 +54,7 @@ Iyyāka na‘budu wa iyyāka nasta‘īn(u),\
 
 *5. Hanya kepada Engkaulah kami menyembah dan hanya kepada Engkaulah kami memohon pertolongan.*
 
-:::box2[(٦) اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ]
+:::box2[اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ (٦)]
 Ihdinaṣ-ṣirāṭal-mustaqīm(a).\
 :::
 
@@ -64,7 +64,7 @@ Ihdinaṣ-ṣirāṭal-mustaqīm(a).\
 
 [^3]: Jalan yang lurus adalah jalan hidup yang benar dan sesuai dengan ajaran Islam yang terkandung dalam Al-Qur’an dan hadis.
 
-:::box2[(٧) صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ]
+:::box2[صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ (٧)]
 Ṣirāṭal-lażīna an‘amta ‘alaihim, gairil-magḍūbi ‘alaihim wa laḍ-ḍāllīn(a).\
 :::
 *7. (yaitu) jalan orang-orang yang telah Engkau beri nikmat, bukan (jalan) mereka yang dimurkai dan bukan (pula jalan) orang-orang yang sesat.*
