--- a/src/pages/quran.mdx
+++ b/src/pages/quran.mdx
@@ -4,9 +4,12 @@ title: Quran
 ```mdx-code-block
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import DocCardList from '@theme/DocCardList';
 ```
 
 # Quran Arab, Terjemahan, Tafsir, Latin dan Audio
+
+<DocCardList/>
 
 :::box1[1. Al Fatihah]
 الفاتحة\
