--- a/docs/quran/latin-kemenag.mdx
+++ b/docs/quran/latin-kemenag.mdx
@@ -2,11 +2,9 @@
 Title : Quran Kemenag
 Source: https://quran.kemenag.go.id
 -->
-:::my-custom-admonition[My Title]
+import DocCardList from '@theme/DocCardList';
 
-It works!
-
-:::
+<DocCardList />
 # 1
 
 Bismillāhir-raḥmānir-raḥīm(i).
