--- a/src/pages/markdown-page.mdx
+++ b/src/pages/markdown-page.mdx
@@ -3,5 +3,7 @@ title: Markdown page example
 ---
 
 # Markdown page example
+import DocCardList from '@theme/DocCardList';
 
+<DocCardList />
 You don't need React to write simple standalone pages.
