--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,4 +1,4 @@
-import Highlight from '@site/src/components/FontSize';
+import FontSize from '@site/src/components/FontSize';
 
 # Al Fatihah 
 <FontSize size="x-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
