--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,4 +1,4 @@
 halo
-import DocCardList from '@site/src/theme/DocCardList';
+import DocCardList from '../src/theme/DocCardList';
 
 <DocCardList />
