--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -4,30 +4,30 @@ import FontSize from '@site/src/components/FontSize';
 
 ---
 
-<FontSize size="x-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
+<FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
 
 ---
 
-<FontSize size="x-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</FontSize>
+<FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</FontSize>
 
 ---
 
-<FontSize size="x-large">الرَّحْمٰنِ الرَّحِيْمِۙ</FontSize>
+<FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ</FontSize>
 
 ---
 
-<FontSize size="x-large">مٰلِكِ يَوْمِ الدِّيْنِۗ</FontSize>
+<FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ</FontSize>
 
 ---
 
-<FontSize size="x-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ</FontSize>
+<FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ</FontSize>
 
 ---
 
-<FontSize size="x-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ</FontSize>
+<FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ</FontSize>
 
 ---
 
-<FontSize size="x-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ</FontSize>
+<FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ</FontSize>
 
 ---
