--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -2,16 +2,16 @@ import FontSize from '@site/src/components/FontSize';
 
 # Al Fatihah 
 
-<FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
+1. <FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
 
-<FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</FontSize>
+2. <FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</FontSize>
 
-<FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ</FontSize>
+3. <FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ</FontSize>
 
-<FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ</FontSize>
+4. <FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ</FontSize>
 
-<FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ</FontSize>
+5. <FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ</FontSize>
 
-<FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ</FontSize>
+6. <FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ</FontSize>
 
-<FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ</FontSize>
+7. <FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ</FontSize>
