--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,5 +1,7 @@
 import FontSize from '@site/src/components/FontSize';
 
+![](/img/surah-title/1.svg)
+
 # Al Fatihah 
 
 1. <FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
