--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,6 +1,6 @@
 import FontSize from '@site/src/components/FontSize';
 
-![](../../static/img/surah-title/1.svg)
+![](/img/surah-title/1.svg)
 
 # Al Fatihah 
 
