--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -2,6 +2,10 @@ import FontSize from '@site/src/components/FontSize';
 
 ![](../assets/surah-title/1.svg)
 
+import DocusaurusSvg from '../assets/surah-title/1.svg';
+
+<DocusaurusSvg />;
+
 # Al Fatihah 
 
 1. <FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
