--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -8,16 +8,16 @@ import DocusaurusSvg from '../assets/surah-title/1.svg';
 
 # Al Fatihah 
 
-1. <FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم</FontSize>
+<FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</FontSize>
 
-2. <FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</FontSize>
+<FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</FontSize>
 
-3. <FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ</FontSize>
+<FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</FontSize>
 
-4. <FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ</FontSize>
+<FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</FontSize>
 
-5. <FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ</FontSize>
+<FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</FontSize>
 
-6. <FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ</FontSize>
+<FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</FontSize>
 
-7. <FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ</FontSize>
+<FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</FontSize>
