--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -2,7 +2,7 @@ import FontSize from '@site/src/components/FontSize';
 
 import DocusaurusSvg from '../assets/surah-title/1.svg';
 
-<DocusaurusSvg />;
+<DocusaurusSvg />
 
 # Al Fatihah 
 
