--- a/quran/surat/al-anam.mdx
+++ b/quran/surat/al-anam.mdx
@@ -1,6 +1,6 @@
-import FontSize from '@site/src/components/FontSize';
+import TextArab from '@site/src/components/TextArab';
 
-<FontSize size="xx-large"></FontSize>
+<TextArab></TextArab>
 
 
 اَلْحَمْدُ لِلّٰهِ الَّذِيْ خَلَقَ السَّمٰوٰتِ وَالْاَرْضَ وَجَعَلَ الظُّلُمٰتِ وَالنُّوْرَ ەۗ ثُمَّ الَّذِيْنَ كَفَرُوْا بِرَبِّهِمْ يَعْدِلُوْنَ۝
