--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,4 +1,4 @@
-import FontSize from '@site/src/components/FontSize';
+import TextArab from '@site/src/components/TextArab';
 
 import DocusaurusSvg from '../assets/surah-title/1.svg';
 
@@ -6,16 +6,16 @@ import DocusaurusSvg from '../assets/surah-title/1.svg';
 
 # Al Fatihah 
 
-<FontSize size="xx-large">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</FontSize>
+<TextArab">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</TextArab>
 
-<FontSize size="xx-large">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</FontSize>
+<TextArab">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</TextArab>
 
-<FontSize size="xx-large">الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</FontSize>
+<TextArab">الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</TextArab>
 
-<FontSize size="xx-large">مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</FontSize>
+<TextArab">مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</TextArab>
 
-<FontSize size="xx-large">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</FontSize>
+<TextArab">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</TextArab>
 
-<FontSize size="xx-large">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</FontSize>
+<TextArab">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</TextArab>
 
-<FontSize size="xx-large">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</FontSize>
+<TextArab">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</TextArab>
