--- a/quran/surat/ali-imran.mdx
+++ b/quran/surat/ali-imran.mdx
@@ -1,6 +1,6 @@
-import FontSize from '@site/src/components/FontSize';
+import TextArab from '@site/src/components/TextArab';
 
-<FontSize size="xx-large"></FontSize>
+<TextArab></TextArab>
 
 الۤمّۤ۝
 
