--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -6,16 +6,16 @@ import DocusaurusSvg from '../assets/surah-title/1.svg';
 
 # Al Fatihah 
 
-<TextArab">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</TextArab>
+<TextArab>بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</TextArab>
 
-<TextArab">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</TextArab>
+<TextArab>اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</TextArab>
 
-<TextArab">الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</TextArab>
+<TextArab>الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</TextArab>
 
-<TextArab">مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</TextArab>
+<TextArab>مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</TextArab>
 
-<TextArab">اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</TextArab>
+<TextArab>اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</TextArab>
 
-<TextArab">اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</TextArab>
+<TextArab>اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</TextArab>
 
-<TextArab">صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</TextArab>
+<TextArab>صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</TextArab>
