--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,3 +1,8 @@
+---
+title: 1. Al-Fatihah • الفاتحة • Pembukaan • Makiyah • 7 Ayat
+sidebar_position: 1
+---
+
 import TextArab from '@site/src/components/TextArab';
 
 import DocusaurusSvg from '../assets/surah-title/1.svg';
