--- a/quran/surat/al-baqoroh.mdx
+++ b/quran/surat/al-baqoroh.mdx
@@ -1,5 +1,5 @@
 ---
-title: 2. Al Baqarah • البقرة • Sapi Betina • Madaniyah • 286 Ayat
+title: 2. Al-Baqarah • البقرة • Sapi Betina • Madaniyah • 286 Ayat
 sidebar_position: 2
 ---
 
