--- a/quran/surat/al-fatihah.mdx
+++ b/quran/surat/al-fatihah.mdx
@@ -1,5 +1,5 @@
 ---
-title: 1. Al-Fatihah • الفاتحة • Pembukaan • Makiyah • 7 Ayat
+title: 1. Al-Fatihah • الفاتحة • Pembukaan • Makkiyah • 7 Ayat
 sidebar_position: 1
 ---
 
@@ -11,16 +11,20 @@ import DocusaurusSvg from '../assets/surah-title/1.svg';
 
 # Al Fatihah 
 
-<TextArab>بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١</TextArab>
+<TextArab>
 
-<TextArab>اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢</TextArab>
+بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْم ۝١
 
-<TextArab>الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣</TextArab>
+اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ ۝٢
 
-<TextArab>مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤</TextArab>
+الرَّحْمٰنِ الرَّحِيْمِۙ ۝٣
 
-<TextArab>اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥</TextArab>
+مٰلِكِ يَوْمِ الدِّيْنِۗ ۝٤
 
-<TextArab>اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦</TextArab>
+اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُۗ ۝٥
 
-<TextArab>صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧</TextArab>
+اِهْدِنَا الصِّرَاطَ الْمُسْتَقِيْمَۙ ۝٦
+
+صِرَاطَ الَّذِيْنَ اَنْعَمْتَ عَلَيْهِمْ ەۙ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّاۤلِّيْنَ ࣖ ۝٧
+
+</TextArab>
