--- a/quran/surat/al-baqoroh.mdx
+++ b/quran/surat/al-baqoroh.mdx
@@ -3,6 +3,10 @@ title: 2. Al-Baqarah • البقرة • Sapi Betina • Madaniyah • 286 Ayat
 sidebar_position: 2
 ---
 
+import DocusaurusSvg from '../assets/surah-title/2.svg';
+
+<DocusaurusSvg />
+
 import TextArab from '@site/src/components/TextArab';
 
 <TextArab>
