--- a/quran/surat/001-al-fatihah.mdx
+++ b/quran/surat/001-al-fatihah.mdx
@@ -1,6 +1,7 @@
 ---
 title: 1. Al-Fatihah • الفاتحة • Pembukaan • Makkiyah • 7 Ayat
 sidebar_position: 1
+slug: al-fatihah
 ---
 
 import TextArab from '@site/src/components/TextArab';
