--- a/quran/surat/002-al-baqarah.mdx
+++ b/quran/surat/002-al-baqarah.mdx
@@ -1,6 +1,7 @@
 ---
 title: 2. Al-Baqarah • البقرة • Sapi Betina • Madaniyah • 286 Ayat
 sidebar_position: 2
+slug: al-baqarah
 ---
 
 import DocusaurusSvg from '../assets/surah-title/2.svg';
