--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,3 +1,3 @@
-import DocCardList from '@theme/DocCardList';
+import {PlaygroundCardsRow} from '@site/src/components/card';
 
-<DocCardList />
+<PlaygroundCardsRow />
