--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -6,3 +6,31 @@ Alfatihah
   makiyah
   pembukaan
 </NewCard>
+
+<NewCard> 
+Alfatihah
+  7 Ayat
+  makiyah
+  pembukaan
+</NewCard>
+
+<NewCard> 
+Alfatihah
+  7 Ayat
+  makiyah
+  pembukaan
+</NewCard>
+
+<NewCard> 
+Alfatihah
+  7 Ayat
+  makiyah
+  pembukaan
+</NewCard>
+
+<NewCard> 
+Alfatihah
+  7 Ayat
+  makiyah
+  pembukaan
+</NewCard>
