--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,36 +1,36 @@
-import NewCard from '@site/src/components/NewCard';
+import CardGrid from '@site/src/components/CardGrid';
 
-<NewCard> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</NewCard>
+</CardGrid>
 
-<NewCard> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</NewCard>
+</CardGrid>
 
-<NewCard> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</NewCard>
+</CardGrid>
 
-<NewCard> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</NewCard>
+</CardGrid>
 
-<NewCard> 
+<CardGrid> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
-</NewCard>
+</CardGrid>
