--- a/quran/index.mdx
+++ b/quran/index.mdx
@@ -1,34 +1,36 @@
 import CardGrid from '@site/src/components/CardGrid';
 
-<CardGrid> 
+
+
+<CardGrid items={[surat]}> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid> 
+<CardGrid items={[surat2]}> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid> 
+<CardGrid items={[surat3]}> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid> 
+<CardGrid items={[surat4]}> 
 Alfatihah
   7 Ayat
   makiyah
   pembukaan
 </CardGrid>
 
-<CardGrid> 
+<CardGrid items={[surat5]}> 
 Alfatihah
   7 Ayat
   makiyah
